bug: case filtar and feat: functions

--- a/tareas.json
+++ b/tareas.json
@@ -5,10 +5,14 @@
     },
     {
         "titulo": "Armar aplicación de Tareas",
-        "estado": "en progreso"
+        "estado": "progreso"
     },
     {
         "titulo": "Break",
+        "estado": "pendiente"
+    },
+    {
+        "titulo": "simulacion",
         "estado": "pendiente"
     }
 ]
