fix: case filtar and crear

--- a/tareas.json
+++ b/tareas.json
@@ -14,5 +14,9 @@
     {
         "titulo": "simulacion",
         "estado": "pendiente"
+    },
+    {
+        "titulo": "Monitoria",
+        "estado": "pendiente"
     }
 ]
